--- a/src/frontend/src/assets/scss/ds-system/ds-colors.scss
+++ b/src/frontend/src/assets/scss/ds-system/ds-colors.scss
@@ -4,6 +4,7 @@ $black: #000000;
 $orange-100: #FF842B;
 $orange-200: #FF6B00;
 $orange-300: #ED6300;
+$orange-400: #FFCC80;
 
 $green-100: #E1FFD7;
 $green-200: #C2E3B7;
@@ -12,6 +13,7 @@ $green-400: #48D618;
 $green-500: #41B619;
 $green-600: #38A413;
 
+$red-300: #E57373;
 $red-800: #E20338;
 $red-900: #C20532;
 
