--- a/src/frontend/src/assets/scss/blocks/cart-form.scss
+++ b/src/frontend/src/assets/scss/blocks/cart-form.scss
@@ -31,12 +31,12 @@
 .cart-form__label {
   @include b-s16-h19;
 
+  align-self: center;
   white-space: nowrap;
 }
 
 .cart-form__address {
   display: flex;
-  align-items: center;
 
   width: 100%;
   margin-top: 20px;
