--- a/src/frontend/src/assets/scss/layout/layout-form.scss
+++ b/src/frontend/src/assets/scss/layout/layout-form.scss
@@ -1,5 +1,5 @@
 .layout-form {
-  min-height: calc(100vh - 61px);
+  min-height: calc(100vh - #{$header-height});
   display: flex;
   flex-direction: column;
   flex-grow: 1;
